--- a/docs/src/styles/custom.css
+++ b/docs/src/styles/custom.css
@@ -1,5 +1,5 @@
 @view-transition {
-  navigation: auto; /* enabled! */
+  navigation: none;
 }
 @font-face {
   font-family: "CaskaydiaCove NFP";
@@ -12,21 +12,15 @@
   --sl-transition-duration: 0.375s;
 }
 
-/* @media (prefers-reduced-motion: reduce) { */
-  /* :root { */
-    /* --sl-transition-duration: 0s; */
-  /* } */
-/* } */
+@media (prefers-reduced-motion: reduce) {
+  :root {
+    --sl-transition-duration: 0s;
+  }
+}
 
-
-/* @media (prefers { */
-  /* :root { */
-    /* --sl-transition-duration: 0s; */
-    code {
-      background-color: transparent;
-    }
-  /* } */
-/* } */
+code {
+  background-color: transparent;
+}
 /* Dark mode colors. */
 :root {
   --sl-color-accent: #8fbcbb;
@@ -115,10 +109,11 @@ html * {
   font-family: "CaskaydiaCove NFP";
   & {
     text-transform: lowercase;
-    transition-property:
-      background, color, border-inline-start, scrollbar-color;
-    transition-duration: var(--sl-transition-duration);
-    transition-timing-function: ease-in-out;
+    transition:
+      var(--sl-transition-duration) background ease-in-out,
+      calc(var(--sl-transition-duration) / 2) color ease-in-out,
+      var(--sl-transition-duration) border-inline-start ease-in-out,
+      var(--sl-transition-duration) scrollbar-color ease-in-out;
   }
 }
 code {
@@ -234,6 +229,11 @@ summary:not(#starlight__on-this-page--mobile) {
     scrollbar-color: var(--sl-color-bg-accent) transparent;
   }
 }
+@media (max-width: 72rem) {
+  :root {
+    --sl-content-width: none;
+  }
+}
 @media (max-width: 50rem) {
   .sidebar-pane {
     background: transparent;
@@ -267,13 +267,28 @@ select > option:hover {
   transition: transform var(--sl-transition-duration) ease;
   box-shadow: unset;
   cursor: pointer;
-  svg {
+  &::before {
+    position: relative;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    font-size: medium;
     transition: transform var(--sl-transition-duration) ease;
+  }
+  &[rel="prev"]::before {
+    content: "[[";
+  }
+  &[rel="next"]::before {
+    content: "]]";
+  }
+  svg {
+    display: none;
   }
   &:hover {
     transform: scale(1.01);
-    svg {
-      transform: scale(1.5);
+    &::before {
+      transform: scale(1.25);
     }
   }
 }
@@ -292,6 +307,12 @@ header > .header > .title-wrapper + [class*="print:hidden"] {
 }
 summary#starlight__on-this-page--mobile {
   border-bottom: none;
+  > .toggle {
+    transition:
+      var(--sl-transition-duration) background ease-in-out,
+      calc(var(--sl-transition-duration) / 2) color ease-in-out,
+      var(--sl-transition-duration) scrollbar-color ease-in-out;
+  }
 }
 sl-sidebar-state-persist > ul ul li {
   border-inline-start: 0.25em solid var(--sl-color-hairline-light);
@@ -315,11 +336,10 @@ body {
 }
 button {
   box-shadow: unset !important;
-  transition-property:
-    background, color, scrollbar-color, transform;
+  transition-property: background, color, scrollbar-color, transform;
   &:hover:not([aria-label="Search"]) {
-  transition-property:
-    background, color, border-inline-start, scrollbar-color, transform;
+    transition-property:
+      background, color, border-inline-start, scrollbar-color, transform;
     transform: scale(1.125);
   }
 }
@@ -372,7 +392,7 @@ figure.frame {
       content: attr(data-language);
       left: 1em;
       top: 6px;
-      transition: color var(--sl-transition-duration) linear;
+      transition: color calc(var(--sl-transition-duration) / 2) linear;
     }
   }
 
@@ -441,7 +461,7 @@ starlight-file-tree {
     font-size: 0.5em;
     color: var(--sl-color-accent);
     transform: translateY(-0.25rem);
-    transition: color var(--sl-transition-duration) linear;
+    transition: color calc(var(--sl-transition-duration) / 2) linear;
     font-weight: bolder;
     font-variant-ligatures: none;
     text-shadow:
@@ -490,9 +510,11 @@ pre.mermaid[data-processed] {
 .social-icons a > :is(span, svg),
 .social-wrapper > a > svg,
 .sl-markdown-content + footer > div:not(.pagination-links) > a > svg {
-  transition: rotate calc(var(--sl-transition-duration) * 2)
-    cubic-bezier(0.34, 1.56, 0.64, 1), color calc(var(--sl-transition-duration) * 2)
-    cubic-bezier(0.34, 1.56, 0.64, 1);
+  transition:
+    rotate calc(var(--sl-transition-duration) * 2)
+      cubic-bezier(0.34, 1.56, 0.64, 1),
+    color calc(var(--sl-transition-duration) * 2)
+      cubic-bezier(0.34, 1.56, 0.64, 1);
   user-select: none;
 }
 .social-icons a:hover > span:is(:first-child, :nth-child(2)),
@@ -529,7 +551,7 @@ pre.mermaid[data-processed] {
   gap: 0.25rem;
   color: var(--sl-color-text);
   text-decoration: none;
-  transition: color var(--sl-transition-duration) ease;
+  transition: color calc(var(--sl-transition-duration) / 2) ease;
   svg {
     stroke: currentColor;
   }
@@ -550,4 +572,12 @@ kbd {
   gap: 0.25em;
   padding-inline: 0.375rem;
   background-color: var(--sl-color-gray-6);
+}
+ul.isMobile li:hover > a {
+  /* just make it slightly brighter */
+  background: color-mix(
+    in oklab,
+    var(--sl-color-gray-6),
+    var(--sl-color-gray-5)
+  );
 }
